fix: Fix code paths

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Pixel Art Maker!</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <h2>Design Canvas</h2>
     <table id="pixelCanvas"></table>
 
-    <script src="d.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
